2007-04-20  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadGedcom.py: fix calendar parsing
	* src/GrampsDb/_WriteGedcom.py: fix calendar generation

2007-04-20  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/Checkpoint.py (Checkpoint.rcs): Remove debugging
	output; Work out retrieval.

2007-04-20  Don Allingham  <don@gramps-project.org>
	* src/DisplayModels/_BaseModel.py (BaseModel.add_row_by_handle): 
	if search not defined, do an insert

2007-04-19  Brian Matherly  <brian@gramps-project.org>
	* src/docgen/ODFDoc.py: PROPERLY escape ampersands

2007-04-18  Don Allingham  <don@gramps-project.org>
	* src/plugins/BookReport.py: escape xml constructs (bug 877)
	* src/PluginUtils/_Options.py: escape xml constructs (bug 877)

2007-04-17  Don Allingham  <don@gramps-project.org>
	* src/Editors/_EditRepository.py: fix double click save bug
	* src/Editors/_EditSource.py: fix double click save bug
	* src/Editors/_EditEvent.py: fix double click save bug
	* src/Editors/_EditPlace.py: fix double click save bug
	* src/Editors/_EditFamily.py (EditFamily.save): fix potential double click of Family 
	Editor dialog

2007-04-16  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/ViewManager.py (create_pages): fix off-by-one error when
	preselecting last view

2007-04-15  Don Allingham  <don@gramps-project.org>
	* po/gramps.pot: update for 2.2.7 preparation

2007-04-15  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_WriteGedcom.py: use CONT to continue page info
	* src/GrampsDb/_GrampsBSDDB.py: additional error checking
	* src/QuestionDialog.py: enable markup
	* src/DbLoader.py: additional error checking

2007-04-14  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/NarrativeWeb.py
	* src/ReportBase/_ReportUtils.py
	0001012: Private source and private child references shown in narrative 
	website.

2007-04-14  Brian Matherly  <brian@gramps-project.org>
	* src\data\main4.css
	* src\data\main5.css
	* src\data\main6.css
	* src\data\main1.css